Added slack invitation widget to frontpage
Added slack invitation widget to frontpage

Added fontawesome css & fonts

Made minor tweak to website.css that was trouncing on bootstrap
buttons

--- a/assets/css/website.css
+++ b/assets/css/website.css
@@ -1996,7 +1996,7 @@ ol,
 blockquote {
   margin-bottom: 1.2rem;
   margin-top: 0; }
-
+/*
 [type='submit'],
 [type='reset'],
 [type='button'],
@@ -2014,7 +2014,7 @@ button {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none; }
-
+*/
 .button {
   border: 1px solid #fff;
   color: #fff;
@@ -2293,3 +2293,7 @@ button {
 svg {
   display: inline-block;
   max-width: 100%; }
+
+p#slack-email {
+  width: 50%;
+}
