--- a/src/pyrva/templates/pages/index.html
+++ b/src/pyrva/templates/pages/index.html
@@ -3,4 +3,6 @@
 {% block content %}
     <h1>Home</h1>
     <p>Welcome to PyRVA!</p>
+
+    {% include 'components/organizers.html' %}
 {% endblock %}
