changed faq to about

--- a/src/pyrva/templates/components/footer.html
+++ b/src/pyrva/templates/components/footer.html
@@ -14,7 +14,7 @@
 <footer class="bg-white">
     <div class="mx-auto max-w-7xl overflow-hidden px-6 py-10 sm:py-14 lg:px-8">
         <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
-            {{ footer_link('FAQ', url_for('faq')) }}
+            {{ footer_link('About', url_for('about')) }}
             {{ footer_link('Sponsors', url_for('sponsors')) }}
             {{ footer_link('Meeting', url_for('meeting')) }}
         </nav>
