--- a/src/pyrva/templates/components/site_nav.html
+++ b/src/pyrva/templates/components/site_nav.html
@@ -50,7 +50,7 @@
                     <div class="flex space-x-4">
                         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                         {{ nav_link(request, url_for('index'), 'Home') }}
-                        {{ nav_link(request, url_for('faq'), 'FAQ') }}
+                        {{ nav_link(request, url_for('about'), 'About') }}
                         {{ nav_link(request, url_for('sponsors'), 'Sponsors') }}
                     </div>
                 </div>
@@ -62,7 +62,7 @@
     <div class="sm:hidden" id="mobile-menu">
         <div class="space-y-1 px-2 pb-3 pt-2">
             {{ mobile_nav_link(request, url_for('index'), 'Home') }}
-            {{ mobile_nav_link(request, url_for('faq'), 'FAQ') }}
+            {{ mobile_nav_link(request, url_for('about'), 'About') }}
             {{ mobile_nav_link(request, url_for('sponsors'), 'Sponsors') }}
         </div>
     </div>
