--- a/src/pyrva/templates/pages/about.html
+++ b/src/pyrva/templates/pages/about.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
-{% block title %}FAQ{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block content %}
-    <h1>FAQ</h1>
+    <h1>About</h1>
 {% endblock %}
