--- a/src/pyrva/templates/layouts/base.html
+++ b/src/pyrva/templates/layouts/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}PyRVA{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+{% block body %}
 <body class="flex flex-col min-h-screen flex-start">
     <header>
         {% include 'components/site_nav.html' %}
@@ -17,4 +18,5 @@
         {% include 'components/footer.html' %}
     </footer>
 </body>
+{% endblock %}
 </html>
