--- a/src/pyrva/templates/pages/sponsors.html
+++ b/src/pyrva/templates/pages/sponsors.html
@@ -10,10 +10,9 @@
 <div class="bg-white py-8 sm:py-18">
     <h2 class="mt-2 text-4xl font-bold tracking-tight text-gray-500 sm:text-5xl text-center">{{ tier|title }} Sponsors
     </h2>
-    <div class="flex justify-center">
+    <div class="flex justify-center my-8 gap-8">
         {% for sponsor in sponsor_list %}
-        <img src="{{ url_for('static', filename=sponsor.logo) }}" alt="{{ sponsor.name }}"
-            class="mt-4 w-48 h-48 object-contain" />
+        {% include 'components/sponsor.html' %}
         {% endfor %}
     </div>
 </div>
