--- a/src/pyrva/templates/pages/meeting.html
+++ b/src/pyrva/templates/pages/meeting.html
@@ -4,89 +4,76 @@
 
 {% block body %}
 
-<body class="grid grid-cols-3 grid-rows-5 h-screen p-0 m-0 gap-8 p-8">
-
-    <section id="event"
-        class="col-start-1 col-end-3 row-start-1 row-end-3 flex flex-col items-center gap-8 justify-evenly">
-        <img class="rounded-lg w-2/5" src="{{ event.image }}" alt="{{ event.title }}" />
-        <h1 class="text-5xl font-bold">{{ event.title }}</h1>
-    </section>
-
-    <section id="schedule" class="flex col-start-1 col-end-3 row-start-3 row-end-5 flex-col items-center gap-8">
-        <div id="clock" class="text-4xl py-12 font-bold"></div>
-        <div class="flex justify-evenly w-full">
-            <div>
-                <h2 class="text-3xl font-semibold">Schedule</h2>
-                <ul class="text-xl space-y-2 my-4">
-                    <li><time class="mr-2">5:45</time>Doors / Food</li>
-                    <li><time class="mr-2">6:15</time>Welcome / Introductions</li>
-                    <li><time class="mr-2">6:30</time>Meeting</li>
-                    <li><time class="mr-2">7:30</time>Wrap-up</li>
-                    <li><time class="mr-2">8:00</time>Social Time!</li>
-                </ul>
-            </div>
-            <div>
-                <h2 class="text-3xl font-semibold">Introductions</h2>
-                <ul class="text-xl space-y-2 my-4">
-                    <li>Name / Pronouns</li>
-                    {% for icebreaker in icebreakers %}
-                    <li>{{ icebreaker }}</li>
+<body>
+    <div class="flex h-screen gap-8 px-12 py-8 bg-gradient-to-br from-blue-200 to-yellow-200">
+        <section id="pyrva" class="flex flex-col justify-evenly basis-1/4">
+            <a href="{{ url_for('index') }}" class="mx-auto"><img
+                    src="{{ url_for('static', filename='images/logo.png') }}" alt="PyRVA Logo" /></a>
+            <ul class="space-y-4 w-fit mx-auto font-semibold">
+                <li class="flex gap-4 text-xl"><span class="text-zinc-600">{% include 'icons/meetup.svg' %}</span>
+                    PyRVA.org/meetup
+                </li>
+                <li class="flex gap-4 text-xl"><span class="text-zinc-600">{% include 'icons/discord.svg' %}</span>
+                    PyRVA.org/discord</li>
+                <li class="flex gap-4 text-xl"><span class="text-zinc-600">{% include 'icons/github.svg' %}</span>
+                    PyRVA.org/github
+                </li>
+                <li class="flex gap-4 text-xl"><span class="text-zinc-600">{% include 'icons/youtube.svg' %}</span>
+                    PyRVA.org/youtube</li>
+            </ul>
+            <div class="w-full">
+                <h2 class="text-3xl font-semibold">Upcoming Events</h2>
+                <div class="grid grid-cols-1 gap-1">
+                    {% for event in upcoming %}
+                    <div class="relative flex items-center space-x-3 rounded-lg px-6 py-5">
+                        <div class="flex-shrink-0">
+                            <img class="h-16 aspect-video rounded-lg" src="{{ event.image }}" alt="">
+                        </div>
+                        <div class="min-w-0 flex-1">
+                            <span class="absolute inset-0" aria-hidden="true"></span>
+                            <p class="text-lg font-medium text-gray-900">{{ event.title }}</p>
+                            <time class="truncate text-lg text-gray-500">{{
+                                event.datetime|format_datetime(config.MEETUP_DT_FORMAT,
+                                config.EVENT_DT_FORMAT) }}</time>
+                        </div>
+                    </div>
                     {% endfor %}
-
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <section id="pyrva" class="col-start-3 col-end-4 row-start-1 row-end-5 flex flex-col justify-evenly">
-        <a href="{{ url_for('index') }}" class="mx-auto"><img src="{{ url_for('static', filename='images/logo.png') }}"
-                alt="PyRVA Logo" /></a>
-        <ul class="space-y-4 w-fit mx-auto">
-            <li class="flex gap-4"><span class="text-zinc-600">{% include 'icons/meetup.svg' %}</span> PyRVA.org/meetup
-            </li>
-            <li class="flex gap-4"><span class="text-zinc-600">{% include 'icons/discord.svg' %}</span>
-                PyRVA.org/discord</li>
-            <li class="flex gap-4"><span class="text-zinc-600">{% include 'icons/github.svg' %}</span> PyRVA.org/github
-            </li>
-            <li class="flex gap-4"><span class="text-zinc-600">{% include 'icons/youtube.svg' %}</span>
-                PyRVA.org/youtube</li>
-        </ul>
-
-        <div class="w-full">
-            <h2 class="text-3xl font-semibold">Upcoming Events</h2>
-
-            <div class="grid grid-cols-1 gap-1">
-                {% for event in upcoming %}
-                <div class="relative flex items-center space-x-3 rounded-lg px-6 py-5">
-                    <div class="flex-shrink-0">
-                        <img class="h-14 aspect-video rounded-lg" src="{{ event.image }}" alt="">
-                    </div>
-                    <div class="min-w-0 flex-1">
-                        <span class="absolute inset-0" aria-hidden="true"></span>
-                        <p class="text-md font-medium text-gray-900">{{ event.title }}</p>
-                        <time class="truncate text-md text-gray-500">{{
-                            event.datetime|format_datetime(config.MEETUP_DT_FORMAT,
-                            config.EVENT_DT_FORMAT) }}</time>
-                    </div>
                 </div>
-                {% endfor %}
             </div>
-        </div>
+        </section>
 
-    </section>
+        <section id="event" class="flex flex-col items-center gap-8 justify-evenly basis-1/2 border rounded-lg shadow-lg p-16 bg-white/50">
+            <img class="rounded-lg w-4/5" src="{{ event.image }}" alt="{{ event.title }}" />
+            <h1 class="text-5xl font-bold">{{ event.title }}</h1>
+            <div class="flex justify-evenly w-full">
+                <div>
+                    <h2 class="text-3xl font-semibold">Schedule</h2>
+                    <ul class="text-xl space-y-2 my-4">
+                        <li><time class="mr-2">5:45</time>Doors / Food</li>
+                        <li><time class="mr-2">6:15</time>Welcome / Introductions</li>
+                        <li><time class="mr-2">6:30</time>Meeting</li>
+                        <li><time class="mr-2">7:30</time>Wrap-up</li>
+                        <li><time class="mr-2">8:00</time>Social Time!</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2 class="text-3xl font-semibold">Introductions</h2>
+                    <ul class="text-xl space-y-2 my-4">
+                        <li>Name / Pronouns</li>
+                        {% for icebreaker in icebreakers %}
+                        <li>{{ icebreaker }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div id="clock" class="text-6xl font-bold font-mono"></div>
+        </section>
 
-    <section id="sponsors" class="row-start-5 row-end-6 col-start-1 col-end-4">
-        <h2 class="text-3xl font-semibold text-center">Sponsors</h2>
-        <div class="flex justify-center gap-12 py-8">
-            {% for level, sponsor_list in sponsors.items() %}
-            {% if sponsor_list %}
-            {% for sponsor in sponsor_list %}
-            <img class="max-h-32" src="{{ url_for('static', filename=sponsor.logo) }}" alt="{{ sponsor.name }}" />
-            {% endfor %}
-            {% endif %}
-            {% endfor %}
-        </div>
-    </section>
+        <section id="sponsors" class="basis-1/4">
+            {% include 'components/sponsor_list.html' %}
+        </section>
+    </div>
+
     <script src="{{ url_for('static', filename='js/clock.js') }}"></script>
 </body>
 {% endblock %}
