--- a/src/pyrva/templates/pages/sponsors.html
+++ b/src/pyrva/templates/pages/sponsors.html
@@ -4,18 +4,5 @@
 
 {% block content %}
 {% include 'components/sponsor_pricing.html' %}
-
-{% for tier, sponsor_list in sponsors.items() %}
-{% if sponsor_list %}
-<div class="bg-white py-8 sm:py-18">
-    <h2 class="mt-2 text-4xl font-bold tracking-tight text-gray-500 sm:text-5xl text-center">{{ tier|title }} Sponsors
-    </h2>
-    <div class="flex justify-center my-8 gap-8">
-        {% for sponsor in sponsor_list %}
-        {% include 'components/sponsor.html' %}
-        {% endfor %}
-    </div>
-</div>
-{% endif %}
-{% endfor %}
+{% include 'components/sponsor_list.html' %}
 {% endblock %}
