--- a/src/pyrva/templates/layouts/base.html
+++ b/src/pyrva/templates/layouts/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}PyRVA{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    {% block head %}{% endblock %}
 </head>
 {% block body %}
 
