--- a/src/pyrva/templates/pages/sponsors.html
+++ b/src/pyrva/templates/pages/sponsors.html
@@ -2,6 +2,10 @@
 
 {% block title %}Sponsors{% endblock %}
 
+{% block head %}
+<meta name="description" content="Support the Python community by sponsoring PyRVA.">
+{% endblock %}
+
 {% block content %}
 {% include 'components/sponsor_pricing.html' %}
 {% include 'components/sponsor_list.html' %}
