simplify to single page site

--- a/src/pyrva/templates/components/footer.html
+++ b/src/pyrva/templates/components/footer.html
@@ -14,8 +14,8 @@
 <footer class="bg-white">
     <div class="mx-auto max-w-7xl overflow-hidden px-6 py-10 sm:py-14 lg:px-8">
         <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
-            {{ footer_link('About', url_for('about')) }}
-            {{ footer_link('Sponsors', url_for('sponsors')) }}
+            {{ footer_link('About', url_for('index') + '#about') }}
+            {{ footer_link('Sponsor', url_for('index') + 'sponsor') }}
             {{ footer_link('Meeting', url_for('meeting')) }}
         </nav>
         <div class="mt-10 flex justify-center space-x-10">
