--- a/src/pyrva/templates/pages/index.html
+++ b/src/pyrva/templates/pages/index.html
@@ -1,5 +1,9 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
+{% include 'components/hero.html' %}
+{% include 'components/about_pyrva.html' %}
 {% include 'components/organizers.html' %}
+{% include 'components/sponsor_pricing.html' %}
+{% include 'components/sponsor_list.html' %}
 {% endblock %}
