--- a/src/pyrva/templates/components/organizers.html
+++ b/src/pyrva/templates/components/organizers.html
@@ -10,7 +10,7 @@
 {% endmacro %}
 
 
-<div class="bg-white py-24 sm:py-32">
+<div class="bg-white py-24 sm:py-32" id="organizers">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0">
             <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Our team</h2>
