--- a/src/pyrva/templates/components/sponsor_pricing.html
+++ b/src/pyrva/templates/components/sponsor_pricing.html
@@ -1,4 +1,4 @@
-<div class="py-24 bg-white sm:py-32">
+<div class="py-24 bg-white sm:py-32" id="sponsor">
   <div class="px-6 mx-auto max-w-7xl lg:px-8">
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-base font-semibold leading-7 text-blue-600">Sponsor PyRVA</h2>
