--- a/src/pyrva/templates/pages/meeting.html
+++ b/src/pyrva/templates/pages/meeting.html
@@ -86,7 +86,7 @@
             <div>{% include 'components/sponsor_list.html' %}</div>
 
             <div>
-                <a href="{{ url_for('sponsor') }}"
+                <a href="{{ url_for('index') + '#sponsor' }}"
                     class="bg-blue-200 font-bold border border-zinc-600 rounded-lg mx-auto flex flex-col w-fit px-8 my-4 py-6 text-center">
                     <div class="text-3xl">Become a Sponsor!</div>
                     <div>pyrva.org/sponsor</div>
